crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@support_gem_tacati.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 11
expression: item
input_file: crates/parser/tests/items/support_gem_tacati.txt
---
Item {
    item_class: "Support Gems",
    rarity: Gem,
    name: Some(
        "Tacati's Ire",
    ),
    base_type: None,
    item_level: None,
    quality: None,
    requirements: Requirements {
        level: Some(
            65,
        ),
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: None,
    properties: [
        Property {
            name: "Category",
            value: "Tacati's Ire",
        },
        Property {
            name: "Support Requirements",
            value: "+5 Dex",
        },
    ],
    rune_mods: [],
    modifiers: [],
    flavour_text: [],
    description: [],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
