crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@tablet_abyss_rare_chests.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 15
expression: item
input_file: crates/parser/tests/items/tablet_abyss_rare_chests.txt
---
Item {
    item_class: "Tablet",
    rarity: Rare,
    name: Some(
        "Godless Inscription",
    ),
    base_type: Some(
        "Abyss Tablet",
    ),
    item_level: Some(
        80,
    ),
    quality: None,
    requirements: Requirements {
        level: None,
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: None,
    properties: [],
    rune_mods: [],
    modifiers: [
        Modifier {
            kind: Implicit,
            source: None,
            name: None,
            tier: None,
            tags: [],
            stats: [
                "Adds Abysses to a Map",
                "10 uses remaining",
            ],
        },
        Modifier {
            kind: Prefix,
            source: None,
            name: Some(
                "Treasurer's",
            ),
            tier: Some(
                1,
            ),
            tags: [],
            stats: [
                "Map contains 3(2-3) additional Rare Chests",
            ],
        },
        Modifier {
            kind: Prefix,
            source: None,
            name: Some(
                "Teeming",
            ),
            tier: Some(
                1,
            ),
            tags: [],
            stats: [
                "Map has 30(30-40)% increased Magic Monsters",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: Some(
                "of Champions",
            ),
            tier: Some(
                1,
            ),
            tags: [],
            stats: [
                "2(1-2) additional Rare Monsters are spawned from Abysses in Map",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: Some(
                "of Dark Power",
            ),
            tier: Some(
                1,
            ),
            tags: [],
            stats: [
                "21(20-30)% increased chance for Abyssal monsters in Map to have Abyssal Modifiers",
            ],
        },
    ],
    flavour_text: [],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
