crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@trial_coins.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 11
expression: item
input_file: crates/parser/tests/items/trial_coins.txt
---
Item {
    item_class: "Trial Coins",
    rarity: Currency,
    name: Some(
        "Djinn Barya",
    ),
    base_type: None,
    item_level: Some(
        80,
    ),
    quality: None,
    requirements: Requirements {
        level: None,
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: None,
    properties: [
        Property {
            name: "Area Level",
            value: "80",
        },
        Property {
            name: "Number of Trials",
            value: "4",
        },
    ],
    rune_mods: [],
    modifiers: [],
    flavour_text: [
        "Take me to the Trial of the Sekhemas.\nI will serve.",
    ],
    description: [
        "Take this item to the Relic Altar at the Trial of the Sekhemas.",
    ],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
