crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@uncut_skill_gem.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 11
expression: item
input_file: crates/parser/tests/items/uncut_skill_gem.txt
---
Item {
    item_class: "Uncut Skill Gems",
    rarity: Currency,
    name: Some(
        "Uncut Skill Gem (Level 18)",
    ),
    base_type: None,
    item_level: None,
    quality: None,
    requirements: Requirements {
        level: None,
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: None,
    properties: [],
    rune_mods: [],
    modifiers: [],
    flavour_text: [],
    description: [
        "Creates a Skill Gem or Level an existing gem to level 18",
        "Right Click to engrave a Skill Gem.",
    ],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
