crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@unique_crossbow.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 11
expression: item
input_file: crates/parser/tests/items/unique_crossbow.txt
---
Item {
    item_class: "Crossbows",
    rarity: Unique,
    name: Some(
        "Rampart Raptor",
    ),
    base_type: Some(
        "Tense Crossbow",
    ),
    item_level: Some(
        81,
    ),
    quality: None,
    requirements: Requirements {
        level: None,
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: None,
    properties: [
        Property {
            name: "Physical Damage",
            value: "12-23 (augmented)",
        },
        Property {
            name: "Critical Hit Chance",
            value: "5.00%",
        },
        Property {
            name: "Attacks per Second",
            value: "2.11 (augmented)",
        },
        Property {
            name: "Reload Time",
            value: "0.83 (augmented)",
        },
    ],
    rune_mods: [],
    modifiers: [
        Modifier {
            kind: Other(
                "Corruption Enhancement",
            ),
            source: None,
            name: None,
            tier: None,
            tags: [],
            stats: [
                "15(20-10)% reduced Attribute Requirements",
            ],
        },
        Modifier {
            kind: Implicit,
            source: None,
            name: None,
            tier: None,
            tags: [],
            stats: [
                "26(20-30)% increased Bolt Speed",
            ],
        },
        Modifier {
            kind: Unique,
            source: None,
            name: None,
            tier: None,
            tags: [
                "Damage",
                "Physical",
                "Attack",
            ],
            stats: [
                "50(40-60)% increased Physical Damage",
            ],
        },
        Modifier {
            kind: Unique,
            source: None,
            name: None,
            tier: None,
            tags: [
                "Attack",
                "Speed",
            ],
            stats: [
                "30% reduced Reload Speed",
            ],
        },
        Modifier {
            kind: Unique,
            source: None,
            name: None,
            tier: None,
            tags: [],
            stats: [
                "Bolts fired by Crossbow Attacks have 100% chance to not",
                "expend Ammunition if you've Reloaded Recently",
            ],
        },
        Modifier {
            kind: Unique,
            source: None,
            name: None,
            tier: None,
            tags: [
                "Attack",
                "Speed",
            ],
            stats: [
                "32(30-40)% increased Attack Speed",
            ],
        },
    ],
    flavour_text: [
        "His approach to the gate was met with sounding trumpets\nand an unfurling of banners. He never saw it coming.\"\n- anonymous Brotherhood of Silence report",
    ],
    description: [],
    notes: [],
    corrupted: true,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
