crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@unique_jewel_desecrated.txt.snap
---
source: crates/parser/tests/snapshots.rs
expression: item
input_file: crates/parser/tests/items/unique_jewel_desecrated.txt
---
Item {
    item_class: "Jewels",
    rarity: Unique,
    name: Some(
        "Heart of the Well",
    ),
    base_type: Some(
        "Diamond",
    ),
    item_level: Some(
        82,
    ),
    quality: None,
    requirements: Requirements {
        level: None,
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: None,
    properties: [
        Property {
            name: "Limited to",
            value: "1",
        },
    ],
    rune_mods: [],
    modifiers: [
        Modifier {
            kind: Prefix,
            source: None,
            name: None,
            tier: None,
            tags: [],
            stats: [
                "Desecrated Prefix",
            ],
        },
        Modifier {
            kind: Prefix,
            source: None,
            name: None,
            tier: None,
            tags: [],
            stats: [
                "Desecrated Prefix",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: None,
            tier: None,
            tags: [],
            stats: [
                "Desecrated Suffix",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: None,
            tier: None,
            tags: [],
            stats: [
                "Desecrated Suffix",
            ],
        },
    ],
    flavour_text: [],
    notes: [
        "~b/o 1 divine",
    ],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
